fix(Theme): fixed-z-index-interaction-with-dropdown.
fixed an issue where the childrencontainer was causing a problem with the header dropdown for updating profile.

--- a/src/components/Theme/Theme.module.css
+++ b/src/components/Theme/Theme.module.css
@@ -36,5 +36,5 @@
   margin: auto;
   margin-top: 8vh;
   overflow: auto;
-  z-index: 2;
+  z-index: 1;
 }
